Fixed footer covering sidebar
Made sidebar no longer a fixed position

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -18,9 +18,9 @@
   }
 
   @media screen and (min-width: $sidebar-screen-min-width) {
-    height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
-    position: fixed;
+    // height: 100vh;
+    // overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    // position: fixed;
     padding-top: $masthead-height;
   }
 
